2008-04-07  Luca Bruno  <lethalman88@gmail.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18297
        Bug #18297 - Acid2/Acid3 -tests don't load load with soup.

        Fixes in the libsoup backend: data url parsing, acid tests, redirects,
        response headers handling and re-entrancy issues on job cancellation.
        Thanks to Dan Winship for libsoup hints.

        * platform/network/ResourceHandleInternal.h:
        (WebCore::ResourceHandleInternal::ResourceHandleInternal): add m_cancelled and remove unuseful m_session
        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::restartedCallback): added to route redirects to webkit
        (WebCore::dataCallback): add response headers, some checks and fix re-entrancy
        (WebCore::parseDataUrl): be an idle callback for the main loop
        (WebCore::ResourceHandle::start):
        (WebCore::ResourceHandle::cancel): fixed re-entrancy


Canonical link: https://commits.webkit.org/25245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31682 268f45cc-cd09-0410-ab3c-d52691b4dbfc